samples/_failures_safe/1761397468_252262_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6341edc1.c: In function ‘main’:
./samples/SAFE/__tmp_6341edc1.c:135:12: error: missing terminating " character
  135 |     printf("
      |            ^
./samples/SAFE/__tmp_6341edc1.c:135:5: error: expected expression at end of input
  135 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_6341edc1.c:135:5: error: expected declaration or statement at end of input
